--- a/index.html
+++ b/index.html
@@ -97,5 +97,8 @@
         <!-- Style -->
         <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
-    <body></body>
+    <body>
+        <h1>Dit me m</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, minima nobis?</p>
+    </body>
 </html>
