--- a/index.html
+++ b/index.html
@@ -98,7 +98,48 @@
         <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
     <body>
-        <h1>Dit me m</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, minima nobis?</p>
+        <!-- Header -->
+        <header class="header">
+            <div class="container">
+                <div class="header___inner">
+                    <!-- Logo -->
+
+                    <a href="#!"
+                        ><img src="./assets/icon/Logo.svg" alt="Lucy"
+                    /></a>
+
+                    <!-- Navbar -->
+                    <nav class="navbar">
+                        <ul class="navbar__list">
+                            <li class="navbar__item">
+                                <a href="#!" class="navbar__link">Home</a>
+                            </li>
+                            <li class="navbar__item">
+                                <a href="#!" class="navbar__link">About</a>
+                            </li>
+                            <li class="navbar__item">
+                                <a href="#!" class="navbar__link"
+                                    >Services & Rates</a
+                                >
+                            </li>
+                            <li class="navbar__item">
+                                <a href="#!" class="navbar__link">Reviews</a>
+                            </li>
+                            <li class="navbar__item">
+                                <a href="#!" class="navbar__link"
+                                    >Contacts us</a
+                                >
+                            </li>
+                        </ul>
+                    </nav>
+
+                    <!-- Header action -->
+                    <div class="header-action">
+                        <a href="#!" class="header-action__linker">Sign in</a>
+                        <a href="#!" class="btn header-action__link">Sign up</a>
+                    </div>
+                </div>
+            </div>
+        </header>
     </body>
 </html>
