--- a/index.html
+++ b/index.html
@@ -146,78 +146,101 @@
         <section class="hero">
             <!-- Hero media -->
             <div class="container">
-                <div class="hero__media">
-                    <!-- Big picture -->
-                    <div class="hero__thumb-big">
-                        <img
-                            src="./assets/image/pet1.png"
-                            alt="cat"
-                            class="thumb-big"
-                        />
-                        <img
-                            src="./assets/icon/decor2.svg"
-                            alt=""
-                            class="hero-decorator decorator-1"
-                        />
-                        <img
-                            src="./assets/icon/decor1.svg"
-                            alt=""
-                            class="hero-decorator decorator-2"
-                        />
-                    </div>
-
-                    <!-- Small picture -->
-                    <div class="hero__thumb-small">
-                        <img
-                            src="./assets/image/pet2.png"
-                            alt="cat"
-                            class="thumb-small"
-                        />
-                    </div>
-
-                    <!-- List -->
-                    <div class="hero__list-wrapper">
-                        <!-- List 1 -->
-                        <div class="hero__list">
+                <div class="hero__inner">
+                    <div class="hero__media">
+                        <!-- Big picture -->
+                        <div class="hero__thumb-big">
                             <img
-                                src="./assets/image/pet3.png"
-                                alt=""
-                                class="hero__list-thumb"
+                                src="./assets/image/pet1.png"
+                                alt="cat"
+                                class="thumb-big"
                             />
-                            <div class="hero__list-desc">
-                                <p class="hero__list-title">Pet Health</p>
-                                <div class="hero__list-skeleton"></div>
-                                <div
-                                    class="hero__list-skeleton"
-                                    style="--width: 40px"
-                                ></div>
-                            </div>
+                            <img
+                                src="./assets/icon/decor2.svg"
+                                alt=""
+                                class="hero-decorator decorator-1"
+                            />
+                            <img
+                                src="./assets/icon/decor1.svg"
+                                alt=""
+                                class="hero-decorator decorator-2"
+                            />
                         </div>
 
-                        <!-- Separator -->
-                        <div class="hero__separator"></div>
-
-                        <!-- List 2 -->
-                        <div class="hero__list">
+                        <!-- Small picture -->
+                        <div class="hero__thumb-small">
                             <img
-                                src="./assets/image/pet4.png"
-                                alt=""
-                                class="hero__list-thumb"
-                                style="--background: #c6e2fa"
+                                src="./assets/image/pet2.png"
+                                alt="cat"
+                                class="thumb-small"
                             />
-                            <div class="hero__list-desc">
-                                <p class="hero__list-title">Pet Health</p>
-                                <div class="hero__list-skeleton"></div>
-                                <div
-                                    class="hero__list-skeleton"
-                                    style="--width: 40px"
-                                ></div>
+                        </div>
+
+                        <!-- List -->
+                        <div class="hero__list-wrapper">
+                            <!-- List 1 -->
+                            <div class="hero__list">
+                                <img
+                                    src="./assets/image/pet3.png"
+                                    alt=""
+                                    class="hero__list-thumb"
+                                />
+                                <div class="hero__list-desc">
+                                    <p class="hero__list-title">Pet Health</p>
+                                    <div class="hero__list-skeleton"></div>
+                                    <div
+                                        class="hero__list-skeleton"
+                                        style="--width: 40px"
+                                    ></div>
+                                </div>
                             </div>
+
+                            <!-- Separator -->
+                            <div class="hero__separator"></div>
+
+                            <!-- List 2 -->
+                            <div class="hero__list">
+                                <img
+                                    src="./assets/image/pet4.png"
+                                    alt=""
+                                    class="hero__list-thumb"
+                                    style="--background: #c6e2fa"
+                                />
+                                <div class="hero__list-desc">
+                                    <p class="hero__list-title">Pet Health</p>
+                                    <div class="hero__list-skeleton"></div>
+                                    <div
+                                        class="hero__list-skeleton"
+                                        style="--width: 40px"
+                                    ></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Hero content -->
+                    <div class="hero__content">
+                        <h1 class="hero__title">
+                            Established & Trusted Pet Care Service
+                        </h1>
+                        <p class="hero__desc">
+                            Discover a wide variety of Pawsitive services to
+                            choose from, including daycare, private walks,
+                            office duty and spa.
+                        </p>
+                        <div class="hero__action">
+                            <a
+                                href="#!"
+                                class="hero__action-link btn"
+                                style="--height: 60px"
+                                >Book a Meet
+                                <img src="assets/icon/arrow.svg" alt=""
+                            /></a>
+                            <a href="#!" class="hero__action-contact"
+                                >Schedule a Call</a
+                            >
                         </div>
                     </div>
                 </div>
-                <!-- Hero content -->
-                <div class="hero__content"></div>
             </div>
         </section>
     </body>
